Remove abstract givenAnAdapter method
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>